# subspace

./: Cargo.toml  Dockerfile-runtime  RUN_EXECUTOR.md  start_first_executor.sh  start_second_executor.sh
.github/workflows/: snapshot-build.yml
crates/bp-header-chain/: Cargo.toml
crates/bp-kusama/: Cargo.toml
crates/bp-messages/: Cargo.toml
crates/bp-polkadot-core/: Cargo.toml
crates/bp-runtime/: Cargo.toml
crates/bp-test-utils/: Cargo.toml
crates/grandpa/: Cargo.toml
crates/pallet-executor/src/: lib.rs
crates/pallet-feeds/: Cargo.toml
crates/pallet-feeds/src/: lib.rs
crates/pallet-subspace/src/: lib.rs  tests.rs
crates/sc-consensus-subspace/: Cargo.toml
crates/sc-consensus-subspace/src/: archiver.rs  block_import.rs  gossip.rs  import_queue.rs  lib.rs  verifier.rs
crates/sp-consensus-subspace/src/: verification.rs
crates/sp-domains/src/: lib.rs
crates/sp-executor/src/: lib.rs
crates/subspace-archiving/src/: archiver.rs
crates/subspace-core-primitives/: Cargo.toml
crates/subspace-core-primitives/src/: lib.rs  pieces.rs
crates/subspace-farmer/: Cargo.toml
crates/subspace-farmer-components/src/: plotting.rs
crates/subspace-farmer/benches/: auditing.rs  proving.rs
crates/subspace-farmer/examples/: net.rs
crates/subspace-farmer/examples/sc_network/: README.md  mod.rs  peer_info.rs  utils.rs
crates/subspace-farmer/src/: commitments.rs  lib.rs  multi_farming.rs  plot.rs  single_disk_plot.rs  ws_rpc_server.rs
crates/subspace-farmer/src/commitments/: commitment_databases.rs
crates/subspace-farmer/src/plot/: tests.rs
crates/subspace-farmer/src/single_disk_plot/: farming.rs
crates/subspace-farmer/src/utils/: archival_storage_pieces.rs  farmer_piece_getter.rs  farmer_provider_record_processor.rs  farmer_provider_storage.rs
crates/subspace-malicious-operator/src/: malicious_domain_instance_starter.rs
crates/subspace-networking/: Cargo.toml
crates/subspace-networking/examples/: announce-piece-complex.rs  announce-piece.rs  get-pieces-complex.rs  get-pieces.rs  networking.rs  object-mappings-requests.rs  relayed-get-pieces-complex.rs  relayed-networking.rs  relayed-requests.rs  requests.rs
crates/subspace-networking/src/: behavior.rs  connected_peers.rs  constructor.rs  create.rs  lib.rs  node.rs  node_runner.rs  object_mappings_request_handler.rs  peer_info.rs  pieces_by_range_handler.rs  request_handlers.rs  request_response_handler.rs  request_responses.rs  shared.rs  utils.rs
crates/subspace-networking/src/behavior/: custom_record_store.rs  persistent_parameters.rs
crates/subspace-networking/src/behavior/provider_storage/: providers.rs
crates/subspace-networking/src/connected_peers/: handler.rs
crates/subspace-networking/src/constructor/: transport.rs
crates/subspace-networking/src/create/: transport.rs
crates/subspace-networking/src/node/: piece_announcement.rs
crates/subspace-networking/src/peer_info/: handler.rs  protocol.rs
crates/subspace-networking/src/pieces_by_range_handler/: tests.rs
crates/subspace-networking/src/protocols/: connected_peers.rs  subspace_connection_limits.rs
crates/subspace-networking/src/request_handlers/: generic_request_handler.rs  piece_announcement.rs
crates/subspace-networking/src/request_responses/: tests.rs
crates/subspace-networking/src/tests/: mod.rs  node.rs  pieces_by_range_handler.rs  request_responses.rs
crates/subspace-networking/src/utils/: multihash.rs  piece_announcement.rs  piece_provider.rs  pieces.rs
crates/subspace-node/res/: chain-spec-raw-gemini-1.json
crates/subspace-node/src/: chain_spec.rs  service.rs
crates/subspace-node/src/commands/: run.rs  shared.rs
crates/subspace-node/src/commands/run/: consensus.rs  domain.rs  shared.rs
crates/subspace-runtime/: Cargo.toml  build.rs
crates/subspace-runtime-primitives/src/: lib.rs
crates/subspace-runtime/src/: lib.rs
crates/subspace-service/: Cargo.toml
crates/subspace-service/src/: config.rs  domains.rs  dsn.rs  dsn_archiver.rs  lib.rs  piece_cache.rs  sync.rs  sync_from_dsn.rs
crates/subspace-service/src/domains/: request_handler.rs  synchronizer.rs
crates/subspace-service/src/dsn/: node_provider_storage.rs
crates/subspace-service/src/sync/: dsn_sync.rs  fast_sync.rs
crates/subspace-service/src/sync/dsn_sync/: import_blocks.rs
crates/subspace-service/src/sync_from_dsn/: fast_sync.rs  fast_sync_engine.rs  import_blocks.rs  segment_header_downloader.rs  snap_sync.rs  synchronizer.rs
crates/subspace-solving/: Cargo.toml
crates/subspace-solving/tests/integration/: main.rs
cumulus/: OVERVIEW.md
cumulus/client/cirrus-executor/src/: aux_schema.rs  bundle_processor.rs  lib.rs  verification.rs
cumulus/test/service/: Cargo.toml
cumulus/test/service/src/: lib.rs
docs/: farming.md
domains/client/domain-operator/: Cargo.toml
domains/client/domain-operator/src/: bundle_processor.rs  domain_block_processor.rs  domain_bundle_producer.rs  domain_worker.rs  fetch_domain_bootstrap_info.rs  lib.rs  operator.rs  snap_sync.rs  sync.rs
domains/service/: Cargo.toml
domains/service/src/: config.rs  domain.rs  lib.rs
domains/test/service/: Cargo.toml
domains/test/service/src/: domain.rs
sc_consensus_subspace/: struct.SubspaceParams.html
test/subspace-test-client/src/: chain_spec.rs
test/subspace-test-runtime/: Cargo.toml  build.rs
test/subspace-test-runtime/src/: lib.rs
test/subspace-test-service/src/: lib.rs
