[workspace]
resolver = "2"
members = [
    "crates/*",
    "domains/client/*",
    "domains/pallets/*",
    "domains/primitives/*",
    "domains/runtime/*",
    "domains/service",
    "domains/test/runtime/*",
    "domains/test/service",
    "shared/*",
    "test/subspace-test-client",
    "test/subspace-test-runtime",
    "test/subspace-test-service",
]
exclude = [
    # TODO: We need to figure out what to do with sp-lightclient before unlocking it again
    "crates/sp-lightclient",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
bitvec = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake3 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
blst = { opt-level = 3 }
rust-kzg-blst = { opt-level = 3 }
chacha20 = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
kzg = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
subspace-chiapos = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-erasure-coding = { opt-level = 3 }
subspace-farmer-components = { opt-level = 3 }
subspace-proof-of-space = { opt-level = 3 }
subspace-proof-of-time = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"

# Reason: We need to patch substrate dependency of frontier to our fork
# TODO: Remove if/when we are using upstream substrate instead of fork
[patch."https://github.com/paritytech/polkadot-sdk.git"]
frame-benchmarking = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
frame-support = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-client-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-network-common = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-network-sync = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-telemetry = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-transaction-pool = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-transaction-pool-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-application-crypto = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-blockchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-crypto-ec-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-crypto-hashing = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-database = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-externalities = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-keystore = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-runtime-interface = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-state-machine = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-std = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-storage = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-timestamp = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-trie = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-inherents = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-io = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/polkadot-sdk", rev = "44d742b90e7852aed1f08ab5299d5d88cfa1c6ed" }

# TODO: Importing https://github.com/supranational/blst/pull/203 to take advantage of optimizations introduced there,
#  switch to upstream once merged or once similar performance improvements land upstream
[patch."https://github.com/supranational/blst.git"]
blst = { git = "https://github.com/subspace/blst", rev = "ab042e18cb3b62e131423380513964e4b2c7b445" }
[patch."https://github.com/subspace/polkadot-sdk"]
sc-consensus = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/consensus/common" }
sp-api = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/api" }
sp-runtime = { version = "24.0.0", path = "../polkadot-sdk/substrate/primitives/runtime" }
sp-keystore = { version = "0.27.0", path = "../polkadot-sdk/substrate/primitives/keystore" }
sp-core = { version = "21.0.0", path = "../polkadot-sdk/substrate/primitives/core" }
sp-externalities = { version = "0.19.0",  path = "../polkadot-sdk/substrate/primitives/externalities" }
sp-storage = { version = "13.0.0", path = "../polkadot-sdk/substrate/primitives/storage" }
sp-io = { version = "23.0.0", path = "../polkadot-sdk/substrate/primitives/io" }
frame-support = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/frame/support" }
frame-system = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/frame/system" }
sp-runtime-interface = { version = "17.0.0", path = "../polkadot-sdk/substrate/primitives/runtime-interface" }
sp-trie = { version = "22.0.0", path = "../polkadot-sdk/substrate/primitives/trie" }
sp-state-machine = { version = "0.28.0", path = "../polkadot-sdk/substrate/primitives/state-machine" }
sp-inherents = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/inherents" }
sp-wasm-interface = { version = "14.0.0", path = "../polkadot-sdk/substrate/primitives/wasm-interface" }
sp-weights = { version = "20.0.0", path = "../polkadot-sdk/substrate/primitives/weights" }
sc-client-db = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/db" }
sp-consensus = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/primitives/consensus/common" }
sp-application-crypto = { version = "23.0.0", path = "../polkadot-sdk/substrate/primitives/application-crypto" }
sc-network = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/network" }
sc-network-common = { version = "0.10.0-dev",  path = "../polkadot-sdk/substrate/client/network/common" }
sc-network-sync = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/network/sync" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/rpc-spec-v2"  }
sp-version = { version = "22.0.0", path = "../polkadot-sdk/substrate/primitives/version"  }
sc-client-api = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/api" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/transaction-pool/api" }
sc-chain-spec = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/chain-spec"  }
sc-network-light = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/network/light"  }
sc-consensus-slots = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/consensus/slots" }
sc-tracing = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/tracing"  }
sc-rpc = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/rpc" }
sp-blockchain = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/blockchain" }
sc-consensus-aura = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/consensus/aura" }
sc-executor = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/executor" }
sc-utils = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/utils" }
sc-service = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/service" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/primitives/consensus/aura" }
sp-consensus-slots = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/primitives/consensus/slots" }
sc-telemetry = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/client/telemetry" }
sp-timestamp = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/timestamp" }
sc-state-db = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/state-db" }
sc-rpc-api = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/rpc-api" }
sc-informant = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/informant" }
sc-network-transactions = { version = "0.10.0-dev", path = "../polkadot-sdk/substrate/client/network/transactions" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/transaction-pool" }
sp-session = { version = "4.0.0-dev", path = "../polkadot-sdk/substrate/primitives/session" }
