[package]
name = "pallet-feeds"
version = "0.1.0"
authors = ["Serge Kovbasiuk <serge@subspace.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Subspace node pallet for interacting with storage"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-core = { version = "4.1.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
subspace-core-primitives = { version = "0.1.0", default-features = false, path = "../subspace-core-primitives" }
sp-runtime = { version = "4.1.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
hex-literal = "0.3.4"
bp-kusama = { version = "0.1.0", path = "../bp-kusama", default-features = false }
pallet-bridge-grandpa = { version = "0.1.0", path = "../grandpa", default-features = false }
bp-runtime = { version = "0.1.0", path = "../bp-runtime", default-features = false }
bp-header-chain = { version = "0.1.0", path = "../bp-header-chain", default-features = false }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
serde_json = "1.0.59"
application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6", default-features = false }

[dev-dependencies]
serde = "1.0.132"
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "subspace-core-primitives/std",
  "pallet-bridge-grandpa/std",
  "bp-runtime/std",
  "sp-runtime/std",
  "bp-kusama/std",
  "bp-header-chain/std",
  "application-crypto/std",
]
try-runtime = ["frame-support/try-runtime"]
